Bookmarks Bar - Improve background in floating mode; - Made it so "empty description" uses the same the same text-colour as bookmark items; - Fixed bookmark items being cutoff.

--- a/Profile Folder/chrome/styles/partials/chrome/chrome-11/_toolbars.scss
+++ b/Profile Folder/chrome/styles/partials/chrome/chrome-11/_toolbars.scss
@@ -17,7 +17,7 @@
 			
 			
 			> * {
-				margin-top: -4px !important;
+				margin-top: -2px !important;
 				margin-bottom: 2px !important;
 			}
 		}
